--- a/arch/arm/boot/dts/efusa9r2dl.dts
+++ b/arch/arm/boot/dts/efusa9r2dl.dts
@@ -216,6 +216,7 @@ wvga {					\
  */
 //#define CONFIG_EFUSA9R2_4WTOUCH_SX8655_ONBOARD
 #define CONFIG_EFUSA9R2_4WTOUCH_SX8655_RGBADAPTER
+//#define CONFIG_EFUSA9R2_4WTOUCH_TSC2004_RGBADAPTER
 //#define CONFIG_EFUSA9R2_CAPTOUCH_MXT224
 //#define CONFIG_EFUSA9R2_CAPTOUCH_FT5x06
 //#define CONFIG_EFUSA9R2_CAPTOUCH_SITRONIX
