--- a/arch/arm/boot/dts/efusa9r2qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9r2qdl.dtsi
@@ -952,7 +952,7 @@
 #endif
 
 #ifdef CONFIG_EFUSA9R2_4WTOUCH_SX8655_RGBADAPTER
-	/* 4/5 wire analog resistive touch, controller on efus SKIT */
+	/* 4/5 wire analog resistive touch on RGB-Adapter */
 	sx8654@49 {
 		compatible = "semtech,sx8654";
 		reg = <0x49>;
@@ -966,6 +966,27 @@
 		reset-gpio = <&gpio1 29 GPIO_ACTIVE_LOW>;
 		x-rev;
 		y-rev;
+	};
+#endif
+
+#ifdef CONFIG_EFUSA9R2_4WTOUCH_TSC2004_RGBADAPTER
+	/* 4/5 wire analog resistive touch on RGB-Adapter */
+	tsc2004@4a {
+		compatible = "ti,tsc2004";
+		reg = <0x4a>;
+		vio-supply = <&reg_vref_3v3>;
+		interrupts-extended = <&gpio1 30 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpio = <&gpio1 29 GPIO_ACTIVE_LOW>;
+		touchscreen-fuzz-x = <4>;
+		touchscreen-fuzz-y = <7>;
+		touchscreen-fuzz-pressure = <20>;
+		touchscreen-size-x = <4096>;
+		touchscreen-size-y = <4096>;
+		touchscreen-max-pressure = <2048>;
+		touchscreen-inverted-y;
+		ti,x-plate-ohms = <280>;
+		ti,pre-charge-time = <4>;
+		ti,sense-time-sel = <3>;
 	};
 #endif
 
