--- a/arch/arm/boot/dts/qblissa9r2q.dts
+++ b/arch/arm/boot/dts/qblissa9r2q.dts
@@ -216,6 +216,7 @@ wvga {					\
  * Select none if you do not need touch support.
  */
 //#define CONFIG_QBLISSA9R2_4WTOUCH_SX8655
+//#define CONFIG_QBLISSA9R2_4WTOUCH_TSC2004
 //#define CONFIG_QBLISSA9R2_CAPTOUCH_MXT224
 #define CONFIG_QBLISSA9R2_CAPTOUCH_FT5x06
 //#define CONFIG_QBLISSA9R2_CAPTOUCH_SITRONIX
