--- a/arch/arm/boot/dts/armstonea9r2dl.dts
+++ b/arch/arm/boot/dts/armstonea9r2dl.dts
@@ -187,6 +187,7 @@ wvga {					\
  * Select none if you do not need touch support.
  */
 //#define CONFIG_ARMSTONEA9R2_4WTOUCH_SX8655
+//#define CONFIG_ARMSTONEA9R2_4WTOUCH_TSC2004
 //#define CONFIG_ARMSTONEA9R2_CAPTOUCH_MXT224
 #define CONFIG_ARMSTONEA9R2_CAPTOUCH_FT5x06
 //#define CONFIG_ARMSTONEA9R2_CAPTOUCH_SITRONIX
