--- a/arch/arm/boot/dts/efusa9q.dts
+++ b/arch/arm/boot/dts/efusa9q.dts
@@ -236,6 +236,7 @@ wvga {					\
  */
 //#define CONFIG_EFUSA9_4WTOUCH_SX8655_ONBOARD
 #define CONFIG_EFUSA9_4WTOUCH_SX8655_RGBADAPTER
+//#define CONFIG_EFUSA9_4WTOUCH_TSC2004_RGBADAPTER
 //#define CONFIG_EFUSA9_CAPTOUCH_MXT224
 //#define CONFIG_EFUSA9_CAPTOUCH_FT5x06
 //#define CONFIG_EFUSA9_CAPTOUCH_SITRONIX
