--- a/arch/arm/configs/fsimx6_defconfig
+++ b/arch/arm/configs/fsimx6_defconfig
@@ -313,6 +313,7 @@ CONFIG_TOUCHSCREEN_FT5X06=y
 CONFIG_TOUCHSCREEN_ST1633I=y
 CONFIG_TOUCHSCREEN_WM97XX=y
 CONFIG_TOUCHSCREEN_SX8654=y
+CONFIG_TOUCHSCREEN_TSC2004=y
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVKMEM is not set
 CONFIG_SERIAL_IMX=y
