Add ssc support for rtl8211f
With Spread-Spectrum Clocking (SSC) the associated clock gets spread
over a certain frequency bandwidth. For EMC this should be enabled to
decrease peaks in the frequency.

--- a/arch/arm/boot/dts/armstonea9r4qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9r4qdl.dtsi
@@ -591,6 +591,9 @@
 			reg = <4>;
 			/* Set the maximum link speed if required */
 			//max-speed = <100>;
+			rtl821x,ssc-rxc-enable;
+			rtl821x,ssc-sysclk-enable;
+			rtl821x,ssc-clkout-enable;
 		};
 	};
 };
