Move LED configuration for ETH-PHYs to device-trees
The LED configuration between boards differ, so move it to device-trees.
Also force Auto-MDIX for Natsemi PHYs. This should be set as default.

--- a/arch/arm/boot/dts/armstonea9r3qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9r3qdl.dtsi
@@ -692,6 +692,8 @@
 			rtl821x,ssc-rxc-enable;
 			rtl821x,ssc-sysclk-enable;
 			rtl821x,ssc-clkout-enable;
+			rtl821x,led-link = <0>;
+			rtl821x,led-act = <1>;
 		};
 	};
 };
