Move LED configuration for ETH-PHYs to device-trees
The LED configuration between boards differ, so move it to device-trees.
Also force Auto-MDIX for Natsemi PHYs. This should be set as default.

--- a/arch/arm/boot/dts/picomoda9qdl.dtsi
+++ b/arch/arm/boot/dts/picomoda9qdl.dtsi
@@ -786,6 +786,8 @@
 			reg = <1>;
 			/* Set the maximum link speed if required */
 			//max-speed = <100>;
+			dp83848,led-activity;
+			dp83848,auto-mdix;
 		};
 	};
 };
