--- a/arch/arm/boot/dts/efusa9r2qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9r2qdl.dtsi
@@ -749,6 +749,7 @@
 			reg = <4>;
 			/* Set the maximum link speed if required */
 			//max-speed = <100>;
+			rtl821x,aldps-enable;
 			rtl821x,ssc-rxc-enable;
 			rtl821x,ssc-sysclk-enable;
 			rtl821x,ssc-clkout-enable;
