--- a/arch/arm/boot/dts/picocoremx6ul.dts
+++ b/arch/arm/boot/dts/picocoremx6ul.dts
@@ -631,7 +631,7 @@ wvga {					\
 #ifdef CONFIG_PICOCOREMX6UL_I2C_C
 &i2c_gpio {
 #ifdef CONFIG_PICOCOREMX6UL_AUDIO
-	sgtl5000: sgtl5000@0a {
+	sgtl5000: sgtl5000@a {
 		compatible = "fsl,sgtl5000";
 		reg = <0x0a>;
 		mono2both;
