--- a/arch/arm/boot/dts/cubea5.dts
+++ b/arch/arm/boot/dts/cubea5.dts
@@ -269,7 +269,7 @@
 #ifdef CONFIG_CUBEA5_SGTL5000_AUDIO
 /* I2C_C (Bitbanging): RTC (PCA8565), SGTL5000 (SKIT) */
 &i2c_gpio {
-	sgtl5000: sgtl5000@0a {
+	sgtl5000: sgtl5000@a {
 		compatible = "fsl,sgtl5000";
 		reg = <0x0a>;
 		mono2both;
