--- a/arch/arm/boot/dts/efusa9r2qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9r2qdl.dtsi
@@ -812,7 +812,7 @@
 	pinctrl-0 = <&pinctrl_i2c1_2>;
 	status = "okay";
 #ifdef CONFIG_EFUSA9R2_SGTL5000_AUDIO
-	sgtl5000: sgtl5000@0a {
+	sgtl5000: sgtl5000@a {
 		compatible = "fsl,sgtl5000";
 		reg = <0x0a>;
 		mono2both;
