--- a/arch/arm/boot/dts/picocoremx6sxr2.dts
+++ b/arch/arm/boot/dts/picocoremx6sxr2.dts
@@ -66,6 +66,7 @@ lcd_wvga {				\
  * select more than one entry! Select none if you do not need touch support.
  */
 #define CONFIG_PICOCOREMX6SX_4WTOUCH_SX8655_RGBADAPTER
+//#define CONFIG_PICOCOREMX6SX_4WTOUCH_TSC2004_RGBADAPTER
 //#define CONFIG_PICOCOREMX6SX_CAPTOUCH_MXT224
 //#define CONFIG_PICOCOREMX6SX_CAPTOUCH_FT5x06
 //#define CONFIG_PICOCOREMX6SX_CAPTOUCH_SITRONIX
@@ -650,11 +651,32 @@ lcd_wvga {				\
 		/*pinctrl-0 = <&pinctrl_touchscreen>;*/
 		interrupt-parent = <&gpio1>;
 		interrupts = <8 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpio = <&gpio3 21 GPIO_ACTIVE_LOW>;
 		x-rev;
 		y-rev;
 	};
 #endif
 
+#ifdef CONFIG_PICOCOREMX6SX_4WTOUCH_TSC2004_RGBADAPTER
+	/* 4/5 wire analog resistive touch on RGB-Adapter */
+	tsc2004@4a {
+		compatible = "ti,tsc2004";
+		reg = <0x4a>;
+		vio-supply = <&reg_vref_3v3>;
+		interrupts-extended = <&gpio1 8 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpio = <&gpio3 21 GPIO_ACTIVE_LOW>;
+		touchscreen-fuzz-x = <4>;
+		touchscreen-fuzz-y = <7>;
+		touchscreen-fuzz-pressure = <20>;
+		touchscreen-size-x = <4096>;
+		touchscreen-size-y = <4096>;
+		touchscreen-max-pressure = <2048>;
+		touchscreen-inverted-y;
+		ti,x-plate-ohms = <280>;
+		ti,pre-charge-time = <4>;
+		ti,sense-time-sel = <3>;
+	};
+#endif
 
 #ifdef CONFIG_PICOCOREMX6SX_CAPTOUCH_SITRONIX
 	/* Sitronix PCAP touch on Touch-Connector (I2C) */
