--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -8,6 +8,7 @@ dtb-$(CONFIG_ARCH_MXC) += armstonemx8m.dtb \
 			  armstonemx8m-lcdif-sn65dsi84-j070wvtc0211.dtb \
 			  armstonemx8m-lcdif-sn65dsi84-g185han01.dtb \
 			  armstonemx8m-dcss-hdmi.dtb
+dtb-$(CONFIG_ARCH_MXC) += armstonemx8mp.dtb
 dtb-$(CONFIG_ARCH_MXC) += picocoremx8mm-lpddr4.dtb \
 			  picocoremx8mm-lpddr4-lcdif-tc358764-g070y2-l01.dtb \
 			  picocoremx8mm-lpddr4-lcdif-tc358764-j070wvtc0211.dtb \
