--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -53,4 +53,9 @@ dtb-$(CONFIG_ARCH_MXC) += picocoremx8mmr2-lpddr4.dtb \
 			  picocoremx8mmr2-lpddr4-lcdif-tc358764-j070wvtc0211.dtb \
 			  picocoremx8mmr2-lpddr4-lcdif-g050tan01.dtb \
 			  picocoremx8mmr2-lpddr4-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb \
-			  picocoremx8mmr2-lpddr4-lcdif-adp-mipi2rgb.dtb \
+			  picocoremx8mmr2-lpddr4-lcdif-adp-mipi2rgb.dtb
+dtb-$(CONFIG_ARCH_MXC) += picocoremx8mpr2.dtb \
+			  picocoremx8mpr2-lcdif-j070wvtc0211.dtb \
+			  picocoremx8mpr2-lcdif-j070wvtc0211.dtb \
+			  picocoremx8mpr2-lcdif-adp-mipi2lvds1-j070wvtc0211-single-display.dtb \
+			  picocoremx8mpr2-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb
