Change fsimx8mp aliases for fec and eqos
Change fsimx8mp aliases for fec and eqos.

Use F&S logical labels for fec and eqos nodes. Have to be same name as
in F&S U-Boot.

--- a/arch/arm64/boot/dts/F+S/armstonemx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/armstonemx8mp.dtsi
@@ -67,6 +67,11 @@
 		stdout-path = &uart2;
 	};
 
+	aliases {
+		ethernet0 = &eqos;
+		ethernet1 = &fec;
+	};
+
 	reserved-memory {
 		#address-cells = <2>;
 		#size-cells = <2>;
